# serializer version: 1
# name: test_rendered_configuration_matches_the_snapshot[apache-proxy-alias][apache-proxy-alias]
  '''
  # Apache reverse proxy configuration for example.com
  # Generated by WASM
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAlias shop.example.com example.org
      ServerAdmin webmaster@example.com
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Proxy settings
      ProxyPreserveHost On
      ProxyRequests Off
      
      ProxyPass / http://127.0.0.1:3000/
      ProxyPassReverse / http://127.0.0.1:3000/
  
      # WebSocket support
      RewriteEngine On
      RewriteCond %{HTTP:Upgrade} websocket [NC]
      RewriteCond %{HTTP:Connection} upgrade [NC]
      RewriteRule ^/?(.*) "ws://127.0.0.1:3000/$1" [P,L]
  
      # Timeouts
      ProxyTimeout 60
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-proxy-redirect-ssl][apache-proxy-redirect-ssl]
  '''
  # Apache reverse proxy configuration for example.com
  # Generated by WASM
  
  # www.example.com redirects permanently to example.com
  <VirtualHost *:80>
      ServerName www.example.com
      DocumentRoot /var/www/html
  
      # Everything but the ACME challenge (webroot method) goes to the primary
      RewriteEngine On
      RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/
      RewriteRule ^ https://example.com%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:443>
      ServerName www.example.com
  
      SSLEngine on
      SSLCertificateFile /etc/letsencrypt/live/example.com/fullchain.pem
      SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
      SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
  
      RewriteEngine On
      RewriteRule ^ https://example.com%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  # old.example.org redirects permanently to example.com
  <VirtualHost *:80>
      ServerName old.example.org
      DocumentRoot /var/www/html
  
      # Everything but the ACME challenge (webroot method) goes to the primary
      RewriteEngine On
      RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/
      RewriteRule ^ https://example.com%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:443>
      ServerName old.example.org
  
      SSLEngine on
      SSLCertificateFile /etc/letsencrypt/live/example.com/fullchain.pem
      SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
      SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
  
      RewriteEngine On
      RewriteRule ^ https://example.com%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAlias shop.example.com
      ServerAdmin webmaster@example.com
  
      # Redirect HTTP to HTTPS
      RewriteEngine On
      RewriteCond %{HTTPS} off
      RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:443>
      ServerName example.com
      ServerAlias shop.example.com
      ServerAdmin webmaster@example.com
  
      # SSL Configuration
      SSLEngine on
      SSLCertificateFile /etc/letsencrypt/live/example.com/fullchain.pem
      SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
      
      # SSL Settings
      SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
      SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
      SSLHonorCipherOrder off
      SSLSessionTickets off
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Proxy settings
      ProxyPreserveHost On
      ProxyRequests Off
      
      ProxyPass / http://127.0.0.1:3000/
      ProxyPassReverse / http://127.0.0.1:3000/
  
      # WebSocket support
      RewriteEngine On
      RewriteCond %{HTTP:Upgrade} websocket [NC]
      RewriteCond %{HTTP:Connection} upgrade [NC]
      RewriteRule ^/?(.*) "ws://127.0.0.1:3000/$1" [P,L]
  
      # Timeouts
      ProxyTimeout 60
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-proxy-redirect][apache-proxy-redirect]
  '''
  # Apache reverse proxy configuration for example.com
  # Generated by WASM
  
  # www.example.com redirects permanently to example.com
  <VirtualHost *:80>
      ServerName www.example.com
      DocumentRoot /var/www/html
  
      # Everything but the ACME challenge (webroot method) goes to the primary
      RewriteEngine On
      RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/
      RewriteRule ^ http://example.com%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAdmin webmaster@example.com
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Proxy settings
      ProxyPreserveHost On
      ProxyRequests Off
      
      ProxyPass / http://127.0.0.1:3000/
      ProxyPassReverse / http://127.0.0.1:3000/
  
      # WebSocket support
      RewriteEngine On
      RewriteCond %{HTTP:Upgrade} websocket [NC]
      RewriteCond %{HTTP:Connection} upgrade [NC]
      RewriteRule ^/?(.*) "ws://127.0.0.1:3000/$1" [P,L]
  
      # Timeouts
      ProxyTimeout 60
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-proxy-ssl][apache-proxy-ssl]
  '''
  # Apache reverse proxy configuration for example.com
  # Generated by WASM
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAdmin webmaster@example.com
  
      # Redirect HTTP to HTTPS
      RewriteEngine On
      RewriteCond %{HTTPS} off
      RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:443>
      ServerName example.com
      ServerAdmin webmaster@example.com
  
      # SSL Configuration
      SSLEngine on
      SSLCertificateFile /etc/letsencrypt/live/example.com/fullchain.pem
      SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
      
      # SSL Settings
      SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
      SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
      SSLHonorCipherOrder off
      SSLSessionTickets off
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Proxy settings
      ProxyPreserveHost On
      ProxyRequests Off
      
      ProxyPass / http://127.0.0.1:3000/
      ProxyPassReverse / http://127.0.0.1:3000/
  
      # WebSocket support
      RewriteEngine On
      RewriteCond %{HTTP:Upgrade} websocket [NC]
      RewriteCond %{HTTP:Connection} upgrade [NC]
      RewriteRule ^/?(.*) "ws://127.0.0.1:3000/$1" [P,L]
  
      # Timeouts
      ProxyTimeout 60
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-proxy-www][apache-proxy-www]
  '''
  # Apache reverse proxy configuration for example.com
  # Generated by WASM
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAlias www.example.com
      ServerAdmin webmaster@example.com
  
      # Redirect HTTP to HTTPS
      RewriteEngine On
      RewriteCond %{HTTPS} off
      RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:443>
      ServerName example.com
      ServerAlias www.example.com
      ServerAdmin webmaster@example.com
  
      # SSL Configuration
      SSLEngine on
      SSLCertificateFile /etc/letsencrypt/live/example.com/fullchain.pem
      SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
      
      # SSL Settings
      SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
      SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
      SSLHonorCipherOrder off
      SSLSessionTickets off
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Proxy settings
      ProxyPreserveHost On
      ProxyRequests Off
      
      ProxyPass / http://127.0.0.1:3000/
      ProxyPassReverse / http://127.0.0.1:3000/
  
      # WebSocket support
      RewriteEngine On
      RewriteCond %{HTTP:Upgrade} websocket [NC]
      RewriteCond %{HTTP:Connection} upgrade [NC]
      RewriteRule ^/?(.*) "ws://127.0.0.1:3000/$1" [P,L]
  
      # Timeouts
      ProxyTimeout 60
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-proxy][apache-proxy]
  '''
  # Apache reverse proxy configuration for example.com
  # Generated by WASM
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAdmin webmaster@example.com
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Proxy settings
      ProxyPreserveHost On
      ProxyRequests Off
      
      ProxyPass / http://127.0.0.1:3000/
      ProxyPassReverse / http://127.0.0.1:3000/
  
      # WebSocket support
      RewriteEngine On
      RewriteCond %{HTTP:Upgrade} websocket [NC]
      RewriteCond %{HTTP:Connection} upgrade [NC]
      RewriteRule ^/?(.*) "ws://127.0.0.1:3000/$1" [P,L]
  
      # Timeouts
      ProxyTimeout 60
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-static-redirect-ssl][apache-static-redirect-ssl]
  '''
  # Apache static site configuration for example.com
  # Generated by WASM
  
  # www.example.com redirects permanently to example.com
  <VirtualHost *:80>
      ServerName www.example.com
      DocumentRoot /var/www/html
  
      # Everything but the ACME challenge (webroot method) goes to the primary
      RewriteEngine On
      RewriteCond %{REQUEST_URI} !^/\.well-known/acme-challenge/
      RewriteRule ^ https://example.com%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:443>
      ServerName www.example.com
  
      SSLEngine on
      SSLCertificateFile /etc/letsencrypt/live/example.com/fullchain.pem
      SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
      SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
  
      RewriteEngine On
      RewriteRule ^ https://example.com%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAlias shop.example.com
      ServerAdmin webmaster@example.com
  
      # Redirect HTTP to HTTPS
      RewriteEngine On
      RewriteCond %{HTTPS} off
      RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
  </VirtualHost>
  
  <VirtualHost *:443>
      ServerName example.com
      ServerAlias shop.example.com
      ServerAdmin webmaster@example.com
  
      # SSL Configuration
      SSLEngine on
      SSLCertificateFile /etc/letsencrypt/live/example.com/fullchain.pem
      SSLCertificateKeyFile /etc/letsencrypt/live/example.com/privkey.pem
      
      # SSL Settings
      SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
      SSLCipherSuite ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
      SSLHonorCipherOrder off
      SSLSessionTickets off
  
      # Document root
      DocumentRoot /var/www/apps/example.com/current/dist
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Directory options
      <Directory /var/www/apps/example.com/current/dist>
          Options -Indexes +FollowSymLinks
          AllowOverride All
          Require all granted
  
          RewriteEngine On
          RewriteBase /
  
          # Deny hidden files and directories (.git, .env, .htpasswd, ...):
          # Apache serves whatever is in the document root, dotfiles included,
          # unless something tells it not to. ACME's HTTP-01 challenge lives
          # under .well-known/ and must stay reachable.
          RewriteCond %{REQUEST_URI} !^/\.well-known/
          RewriteRule (^|/)\. - [F]
  
          # SPA support - rewrite to index.html
          RewriteRule ^index\.html$ - [L]
          RewriteCond %{REQUEST_FILENAME} !-f
          RewriteCond %{REQUEST_FILENAME} !-d
          RewriteRule . /index.html [L]
      </Directory>
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Cache static assets
      <FilesMatch "\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$">
          Header set Cache-Control "public, max-age=31536000, immutable"
      </FilesMatch>
  
      # Compression
      <IfModule mod_deflate.c>
          AddOutputFilterByType DEFLATE text/html text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml
      </IfModule>
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[apache-static][apache-static]
  '''
  # Apache static site configuration for example.com
  # Generated by WASM
  
  <VirtualHost *:80>
      ServerName example.com
      ServerAdmin webmaster@example.com
  
      # Document root
      DocumentRoot /var/www/apps/example.com/dist
  
      # Logging
      ErrorLog ${APACHE_LOG_DIR}/example.com.error.log
      CustomLog ${APACHE_LOG_DIR}/example.com.access.log combined
  
      # Directory options
      <Directory /var/www/apps/example.com/dist>
          Options -Indexes +FollowSymLinks
          AllowOverride All
          Require all granted
  
          RewriteEngine On
          RewriteBase /
  
          # Deny hidden files and directories (.git, .env, .htpasswd, ...):
          # Apache serves whatever is in the document root, dotfiles included,
          # unless something tells it not to. ACME's HTTP-01 challenge lives
          # under .well-known/ and must stay reachable.
          RewriteCond %{REQUEST_URI} !^/\.well-known/
          RewriteRule (^|/)\. - [F]
  
          # SPA support - rewrite to index.html
          RewriteRule ^index\.html$ - [L]
          RewriteCond %{REQUEST_FILENAME} !-f
          RewriteCond %{REQUEST_FILENAME} !-d
          RewriteRule . /index.html [L]
      </Directory>
  
      # Security headers
      Header always set X-Frame-Options "SAMEORIGIN"
      Header always set X-Content-Type-Options "nosniff"
      Header always set X-XSS-Protection "1; mode=block"
      Header always set Referrer-Policy "strict-origin-when-cross-origin"
  
      # Cache static assets
      <FilesMatch "\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$">
          Header set Cache-Control "public, max-age=31536000, immutable"
      </FilesMatch>
  
      # Compression
      <IfModule mod_deflate.c>
          AddOutputFilterByType DEFLATE text/html text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml
      </IfModule>
  </VirtualHost>
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-proxy-alias][nginx-proxy-alias]
  '''
  # Nginx reverse proxy configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com shop.example.com example.org;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Proxy settings
      location / {
          proxy_pass http://127.0.0.1:3000;
          proxy_http_version 1.1;
          
          # Headers
          proxy_set_header Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Port $server_port;
          
          # WebSocket support
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          
          # Timeouts
          proxy_connect_timeout 60s;
          proxy_send_timeout 60s;
          proxy_read_timeout 60s;
          
          # Buffer settings
          proxy_buffering on;
          proxy_buffer_size 128k;
          proxy_buffers 4 256k;
          proxy_busy_buffers_size 256k;
      }
  
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-proxy-redirect-ssl][nginx-proxy-redirect-ssl]
  '''
  # Nginx reverse proxy configuration for example.com
  # Generated by WASM
  
  # www.example.com redirects permanently to example.com
  server {
      listen 80;
      listen [::]:80;
      server_name www.example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      location / {
          return 301 https://example.com$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name www.example.com;
  
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
  
      return 301 https://example.com$request_uri;
  }
  
  # old.example.org redirects permanently to example.com
  server {
      listen 80;
      listen [::]:80;
      server_name old.example.org;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      location / {
          return 301 https://example.com$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name old.example.org;
  
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
  
      return 301 https://example.com$request_uri;
  }
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com shop.example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      # Redirect HTTP to HTTPS (except ACME challenges)
      location / {
          return 301 https://$host$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name example.com shop.example.com;
  
      # SSL Configuration
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      
      # SSL Settings
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
      ssl_session_timeout 1d;
      ssl_session_cache shared:SSL:50m;
      ssl_stapling on;
      ssl_stapling_verify on;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Proxy settings
      location / {
          proxy_pass http://127.0.0.1:3000;
          proxy_http_version 1.1;
          
          # Headers
          proxy_set_header Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Port $server_port;
          
          # WebSocket support
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          
          # Timeouts
          proxy_connect_timeout 60s;
          proxy_send_timeout 60s;
          proxy_read_timeout 60s;
          
          # Buffer settings
          proxy_buffering on;
          proxy_buffer_size 128k;
          proxy_buffers 4 256k;
          proxy_busy_buffers_size 256k;
      }
  
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-proxy-redirect][nginx-proxy-redirect]
  '''
  # Nginx reverse proxy configuration for example.com
  # Generated by WASM
  
  # www.example.com redirects permanently to example.com
  server {
      listen 80;
      listen [::]:80;
      server_name www.example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      location / {
          return 301 http://example.com$request_uri;
      }
  }
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Proxy settings
      location / {
          proxy_pass http://127.0.0.1:3000;
          proxy_http_version 1.1;
          
          # Headers
          proxy_set_header Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Port $server_port;
          
          # WebSocket support
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          
          # Timeouts
          proxy_connect_timeout 60s;
          proxy_send_timeout 60s;
          proxy_read_timeout 60s;
          
          # Buffer settings
          proxy_buffering on;
          proxy_buffer_size 128k;
          proxy_buffers 4 256k;
          proxy_busy_buffers_size 256k;
      }
  
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-proxy-ssl][nginx-proxy-ssl]
  '''
  # Nginx reverse proxy configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      # Redirect HTTP to HTTPS (except ACME challenges)
      location / {
          return 301 https://$host$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name example.com;
  
      # SSL Configuration
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      
      # SSL Settings
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
      ssl_session_timeout 1d;
      ssl_session_cache shared:SSL:50m;
      ssl_stapling on;
      ssl_stapling_verify on;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Proxy settings
      location / {
          proxy_pass http://127.0.0.1:3000;
          proxy_http_version 1.1;
          
          # Headers
          proxy_set_header Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Port $server_port;
          
          # WebSocket support
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          
          # Timeouts
          proxy_connect_timeout 60s;
          proxy_send_timeout 60s;
          proxy_read_timeout 60s;
          
          # Buffer settings
          proxy_buffering on;
          proxy_buffer_size 128k;
          proxy_buffers 4 256k;
          proxy_busy_buffers_size 256k;
      }
  
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-proxy-www][nginx-proxy-www]
  '''
  # Nginx reverse proxy configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com www.example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      # Redirect HTTP to HTTPS (except ACME challenges)
      location / {
          return 301 https://$host$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name example.com www.example.com;
  
      # SSL Configuration
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      
      # SSL Settings
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
      ssl_session_timeout 1d;
      ssl_session_cache shared:SSL:50m;
      ssl_stapling on;
      ssl_stapling_verify on;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Proxy settings
      location / {
          proxy_pass http://127.0.0.1:3000;
          proxy_http_version 1.1;
          
          # Headers
          proxy_set_header Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Port $server_port;
          
          # WebSocket support
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          
          # Timeouts
          proxy_connect_timeout 60s;
          proxy_send_timeout 60s;
          proxy_read_timeout 60s;
          
          # Buffer settings
          proxy_buffering on;
          proxy_buffer_size 128k;
          proxy_buffers 4 256k;
          proxy_busy_buffers_size 256k;
      }
  
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-proxy][nginx-proxy]
  '''
  # Nginx reverse proxy configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Proxy settings
      location / {
          proxy_pass http://127.0.0.1:3000;
          proxy_http_version 1.1;
          
          # Headers
          proxy_set_header Host $host;
          proxy_set_header X-Real-IP $remote_addr;
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Forwarded-Proto $scheme;
          proxy_set_header X-Forwarded-Host $host;
          proxy_set_header X-Forwarded-Port $server_port;
          
          # WebSocket support
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
          
          # Timeouts
          proxy_connect_timeout 60s;
          proxy_send_timeout 60s;
          proxy_read_timeout 60s;
          
          # Buffer settings
          proxy_buffering on;
          proxy_buffer_size 128k;
          proxy_buffers 4 256k;
          proxy_busy_buffers_size 256k;
      }
  
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-static-redirect-ssl][nginx-static-redirect-ssl]
  '''
  # Nginx static site configuration for example.com
  # Generated by WASM
  
  # www.example.com redirects permanently to example.com
  server {
      listen 80;
      listen [::]:80;
      server_name www.example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      location / {
          return 301 https://example.com$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name www.example.com;
  
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
  
      return 301 https://example.com$request_uri;
  }
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com shop.example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method). ^~ stops
      # nginx from even considering the hidden-files regex below for this
      # path: a plain prefix location loses to any matching regex location,
      # checked in file order, and ".well-known" itself starts with a dot.
      location ^~ /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      # Redirect HTTP to HTTPS (except ACME challenges)
      location / {
          return 301 https://$host$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name example.com shop.example.com;
  
      # SSL Configuration
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      
      # SSL Settings
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
      ssl_session_timeout 1d;
      ssl_session_cache shared:SSL:50m;
      ssl_stapling on;
      ssl_stapling_verify on;
  
      # Document root
      root /var/www/apps/example.com/current/dist;
      index index.html index.htm;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Cache static assets
      location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
          expires 1y;
          add_header Cache-Control "public, immutable";
          access_log off;
      }
  
      # SPA support - try files then fallback to index.html
      location / {
          try_files $uri $uri/ /index.html;
      }
  
      # Other well-known resources (security.txt, apple-app-site-association,
      # a renewal's ACME check, ...) must stay reachable too: ^~ here keeps
      # this whole prefix out of the hidden-files regex below, the same way
      # the acme-challenge location above does.
      location ^~ /.well-known/ {
      }
  
      # Deny access to hidden files and directories, except /.well-known/ above.
      location ~ /\. {
          deny all;
          access_log off;
          log_not_found off;
      }
  }
  '''
# ---
# name: test_rendered_configuration_matches_the_snapshot[nginx-static][nginx-static]
  '''
  # Nginx static site configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method). ^~ stops
      # nginx from even considering the hidden-files regex below for this
      # path: a plain prefix location loses to any matching regex location,
      # checked in file order, and ".well-known" itself starts with a dot.
      location ^~ /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
  
      # Document root
      root /var/www/apps/example.com/dist;
      index index.html index.htm;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Cache static assets
      location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
          expires 1y;
          add_header Cache-Control "public, immutable";
          access_log off;
      }
  
      # SPA support - try files then fallback to index.html
      location / {
          try_files $uri $uri/ /index.html;
      }
  
      # Other well-known resources (security.txt, apple-app-site-association,
      # a renewal's ACME check, ...) must stay reachable too: ^~ here keeps
      # this whole prefix out of the hidden-files regex below, the same way
      # the acme-challenge location above does.
      location ^~ /.well-known/ {
      }
  
      # Deny access to hidden files and directories, except /.well-known/ above.
      location ~ /\. {
          deny all;
          access_log off;
          log_not_found off;
      }
  }
  '''
# ---
